# drafts2

./: BUILD  CMakeLists.txt
embed_dart/: CMakeLists.txt
embed_dart/src/: dart.cc  isolate.cc  isolate.h  library.cc
examples/dart/: main.dart
examples/flutterapp/lib/: main.dart
src/: test.cpp
